--- a/views/showProducts.ejs
+++ b/views/showProducts.ejs
@@ -21,7 +21,7 @@
             </div>
 
             <select class="form-select" aria-label="Seleccione una categoria" id="categoria" required>
-              <option value="0">Seleccione una categoria</option>
+              <option disabled value="">Seleccione una categoria</option>
 
               <% if ( Categoria == 'Calzado') { %>
               <option value="1" selected>Calzado</option>
@@ -46,57 +46,72 @@
               <% } %>
             </select>
 
-            <form action="/AddProduct" method="post" class="row g-3 py-3">
+            <form action="/AddProduct" method="post" class="row g-3 py-3 needs-validation" novalidate>
               <div class="col-md-6">
                 <label for="Marca" id="Marcalb" class="form-label">Marca</label>
                 <input type="text" class="form-control" id="Marca" name="Marca" required/>
+                <div class="invalid-feedback">La Marca es requerida</div>
                 <input type="text" class="form-control" id="Categoria_Prod" name="Categoria_Prod" hidden/>
               </div>
 
               <div class="col-md-6">
                 <label for="Existencia" class="form-label">Existencia del producto</label>
-                <input type="number" class="form-control" id="Existencia" name="Existencia"/>
+                <input type="number" class="form-control" id="Existencia" name="Existencia" required/>
+                <div class="invalid-feedback">La Existencia es requerida</div>
               </div>
 
               <div class="col-md-6">
                 <label for="Precio" class="form-label">Precio del Producto</label>
                 <input type="number" class="form-control" id="Precio" name="Precio" required/>
+                <div class="invalid-feedback">El Precio es requerido</div>
               </div>
 
               <div class="col-md-6">
                 <label for="Color" class="form-label">Color del producto</label>
                 <input type="text" class="form-control" id="Color" name="Color" required/>
+                <div class="invalid-feedback">El Color es requerido</div>
               </div>
 
               <div class="col-md-6">
                 <label for="Tipo" class="form-label">Tipo de producto</label>
                 <input type="text" class="form-control" id="Tipo" name="Tipo" required/>
+                <div class="invalid-feedback">El Tipo de Producto es requerido</div>
               </div>
 
               <div class="col-md-6">
                 <label for="FechaIngreso" class="form-label">Fecha de Ingreso</label>
                 <input type="date" class="form-control" id="FechaIngreso" name="Fecha" required/>
+                <div class="invalid-feedback">La Fecha es requerida</div>
               </div>
 
               <div class="col-md-6">
                 <label for="Talla" id="Tallalb" class="form-label">Talla del producto</label>
-                <input type="text" class="form-control" id="Talla" name="Talla"/>
+                <input type="text" class="form-control" id="Talla" name="Talla" required/>
+                <div class="invalid-feedback">La Talla es requerida</div>
               </div>
 
               <div class="col-md-6">
                 <label for="Modelo" id="Modelolb" class="form-label">Modelo del producto</label>
-                <input type="text" class="form-control" id="Modelo" name="Modelo"/>
+                <input type="text" class="form-control" id="Modelo" name="Modelo" required/>
+                <div class="invalid-feedback">El Modelo es requerido</div>
               </div>
 
               <div class="col-md-6">
                 <label for="Clasificacion" id="Clasificacionlb" class="form-label" >Clasificacion</label>
-                <input type="text" class="form-control" id="Clasificacion" name="Clasificacion"/>
+                <input type="text" class="form-control" id="Clasificacion" name="Clasificacion" required/>
+                <div class="invalid-feedback">La Clasificacion es requerida</div>
+              </div>
 
+              <div class="col-md-6">
                 <label for="Dimensiones" id="Dimensioneslb" class="form-label">Dimensiones</label>
-                <input type="text" class="form-control" id="Dimensiones" name="Dimensiones"/>
+                <input type="text" class="form-control" id="Dimensiones" name="Dimensiones" required/>
+                <div class="invalid-feedback">La Dimension es requerida</div>
 
-                <label for="UnidadMedida" id="UnidadMedidalb" class="form-label">Unidad de Medida</label>
-                <input type="text" class="form-control" id="UnidadMedida" name="Unidad_Medida"/>
+                <div>
+                  <label for="UnidadMedida" id="UnidadMedidalb" class="form-label">Unidad de Medida</label>
+                  <input type="text" class="form-control" id="UnidadMedida" name="Unidad_Medida" required/>
+                  <div class="invalid-feedback">La Medida es requerida</div>
+                </div>
               </div>
 
               <div class="d-grid gap-2">
@@ -181,6 +196,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/resources/js/script.js"></script>
     <script src="/resources/js/ScriptProducts.js"></script>
+    <script src="/resources/js/validaciones.js"></script>
 
     <% if (typeof alert != "undefined") { %>
     <script>
