--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -8,58 +8,262 @@
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/resources/images/favicon.ico">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style2.css">
+    <link href="https://fonts.googleapis.com/css?family=Muli:300,700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
   </head>
   <body>
     <%- include('sidebar.ejs') %> 
     <section class="home-section">
-      <div class="Container" style ="background-color: aliceblue;">
-        <div class="Container row mx-5 col-xl-11 col-lg-8">
-
-          <div class="card mx-2 mb-2" style="width: 12rem; height: 26rem;margin-top: 6rem;" >
-            <img src="/resources/images/productoCardInicio.png" class="card-img-top mx-1 my-3" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">El Producto más vendido</h5>
-              <a href="#" class="btn btn-primary">Mostrar Productos</a>
+      <div id="content" class="bg-grey w-100">
+        <section class="bg-light py-3">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-9 col-md-8">
+                <h1 class="font-weight-bold mb-0">Bienvenido nuevamente</h1>
+                <p class="lead text-muted">Revisa la última información</p>
+              </div>
+              <div class="col-lg-3 col-md-4 d-flex">
+                <button class="btn btn-primary w-100 align-self-center">
+                  Descargar reporte
+                </button>
+              </div>
             </div>
           </div>
-
-          <div class="card mx-2 mb-2" style="width: 12rem; height: 26rem;margin-top: 6rem;" >
-            <img src="/resources/images/vendedorCardInicio.png" class="card-img-top mx-1 my-3" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">El Vendedor con más ventas</h5>
-              <a href="#" class="btn btn-primary">Mostrar vendedor</a>
+        </section>
+  
+        <section class="bg-mix py-3">
+          <div class="container">
+            <div class="card rounded-0">
+              <div class="card-body">
+                <div class="row">
+                  <div class="col-lg-3 col-md-6 d-flex stat my-3">
+                    <div class="mx-auto">
+                      <h6 class="text-muted">Ingresos mensuales</h6>
+                      <h3 class="font-weight-bold">$50000</h3>
+                      <h6 class="text-success">
+                        <i class="icon ion-md-arrow-dropup-circle"></i> 50.50%
+                      </h6>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 d-flex stat my-3">
+                    <div class="mx-auto">
+                      <h6 class="text-muted">Productos activos</h6>
+                      <h3 class="font-weight-bold">100</h3>
+                      <h6 class="text-success">
+                        <i class="icon ion-md-arrow-dropup-circle"></i> 25.50%
+                      </h6>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 d-flex stat my-3">
+                    <div class="mx-auto">
+                      <h6 class="text-muted">No. de clientes</h6>
+                      <h3 class="font-weight-bold">100</h3>
+                      <h6 class="text-success">
+                        <i class="icon ion-md-arrow-dropup-circle"></i> 75.50%
+                      </h6>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 d-flex my-3">
+                    <div class="mx-auto">
+                      <h6 class="text-muted">Clientes nuevos</h6>
+                      <h3 class="font-weight-bold">28</h3>
+                      <h6 class="text-success">
+                        <i class="icon ion-md-arrow-dropup-circle"></i> 15.50%
+                      </h6>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-
-          <div class="card mx-2 mb-2" style="width: 12rem; height: 26rem;margin-top: 6rem;" >
-            <img src="/resources/images/clienteCardInicio.png" class="card-img-top mx-1 my-3" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">El Cliente con más ventas</h5>
-              <a href="#" class="btn btn-primary">Mostrar Cliente</a>
+        </section>
+  
+        <section>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6 my-3">
+                <div class="card rounded-0">
+                  <div class="card-header bg-light">
+                    <h6 class="font-weight-bold mb-0">
+                      Promedio de ventas al credito mensuales
+                    </h6>
+                  </div>
+                  <div class="card-body">
+                    <canvas id="myChart" width="300" height="150"></canvas>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="col-lg-6 my-3">
+                <div class="card rounded-0">
+                  <div class="card-header bg-light">
+                    <h6 class="font-weight-bold mb-0">
+                      Promedio de ventas al contado mensuales
+                    </h6>
+                  </div>
+                  <div class="card-body">
+                    <canvas id="myChart2" width="300" height="150"></canvas>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-6 my-3">
+                <div class="card rounded-0">
+                  <div class="card-header bg-light">
+                    <h6 class="font-weight-bold mb-0">Ventas recientes</h6>
+                  </div>
+                  <div class="card-body pt-2">
+                    <div class="d-flex border-bottom py-2">
+                      <div class="d-flex mr-3">
+                        <h2 class="align-self-center mb-0">
+                          <i class="icon ion-md-pricetag"></i>
+                        </h2>
+                      </div>
+                      <div class="align-self-center">
+                        <h6 class="d-inline-block mb-0">C$850</h6>
+                        
+                        <small class="d-block text-muted">Ventas al credito</small>
+                      </div>
+                    </div>
+                    <div class="d-flex border-bottom py-2">
+                      <div class="d-flex mr-3">
+                        <h2 class="align-self-center mb-0">
+                          <i class="icon ion-md-pricetag"></i>
+                        </h2>
+                      </div>
+                      <div class="align-self-center">
+                        <h6 class="d-inline-block mb-0">C$250</h6>
+                        
+                        <small class="d-block text-muted">Venta al contado</small>
+                      </div>
+                    </div>
+                    <div class="d-flex border-bottom py-2">
+                      <div class="d-flex mr-3">
+                        <h2 class="align-self-center mb-0">
+                          <i class="icon ion-md-pricetag"></i>
+                        </h2>
+                      </div>
+                      <div class="align-self-center">
+                        <h6 class="d-inline-block mb-0">C$1050</h6>
+                        
+                        <small class="d-block text-muted">Venta al contado</small>
+                      </div>
+                    </div>
+                    <div class="d-flex border-bottom py-2">
+                      <div class="d-flex mr-3">
+                        <h2 class="align-self-center mb-0">
+                          <i class="icon ion-md-pricetag"></i>
+                        </h2>
+                      </div>
+                      <div class="align-self-center">
+                        <h6 class="d-inline-block mb-0">C$2500</h6>
+                        
+                        <small class="d-block text-muted">Venta al credito</small>
+                      </div>
+                    </div>
+                    <div class="d-flex border-bottom py-2 mb-3">
+                      <div class="d-flex mr-3">
+                        <h2 class="align-self-center mb-0">
+                          <i class="icon ion-md-pricetag"></i>
+                        </h2>
+                      </div>
+                      <div class="align-self-center">
+                        <h6 class="d-inline-block mb-0">C$2800</h6>
+                        
+                        <small class="d-block text-muted">Venta al credito</small>
+                      </div>
+                    </div>
+                    <button class="btn btn-primary w-100">Ver todas</button>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-
-          <div class="card mx-2 mb-2" style="width: 12rem; height: 26rem;margin-top: 6rem;" >
-            <img src="/resources/images/worstcustomer.png" class="card-img-top mx-1 my-3" style="height: 10rem;" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">El Cliente con menos ventas</h5>
-              <a href="#" class="btn btn-primary">Mostrar vendedor</a>
-            </div>
-          </div>
-
-          <div class="card mx-2 mb-2" style="width: 12rem; height: 26rem;margin-top: 6rem;" >
-            <img src="/resources/images/worstsalesman.png" class="card-img-top mx-1 my-3" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">El Vendedor con menos ventas</h5>
-              <a href="#" class="btn btn-primary">Mostrar vendedor</a>
-            </div>
-          </div>
-
-
-        </div>
+        </section>
       </div>
     </section>
 
     <script src="script.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"
+      integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      var ctx = document.getElementById("myChart").getContext("2d");
+      var myChart = new Chart(ctx, {
+        type: "bar",
+        data: {
+          labels: ["Dic 2023", "Ene 2024", "Fre 2024", "Mar 2024"],
+          datasets: [
+            {
+              label: "Ventas de meses anteriores",
+              data: [50, 100, 150, 200],
+              backgroundColor: ["#12C9E5", "#12C9E5", "#12C9E5", "#111B54"],
+              maxBarThickness: 30,
+              maxBarLength: 2,
+            },
+          ],
+        },
+        options: {
+          scales: {
+            yAxes: [
+              {
+                ticks: {
+                  beginAtZero: true,
+                },
+              },
+            ],
+          },
+        },
+      });
+    </script>
+
+    <script>
+      var ctx = document.getElementById("myChart2").getContext("2d");
+      var myChart = new Chart(ctx, {
+        type: "bar",
+        data: {
+          labels: ["Dic 2023", "Ene 2024", "Fre 2024", "Mar 2024"],
+          datasets: [
+            {
+              label: "Ventas de meses anteriores",
+              data: [80, 110, 120, 180],
+              backgroundColor: ["#12C9E5", "#12C9E5", "#12C9E5", "#111B54"],
+              maxBarThickness: 30,
+              maxBarLength: 2,
+            },
+          ],
+        },
+        options: {
+          scales: {
+            yAxes: [
+              {
+                ticks: {
+                  beginAtZero: true,
+                },
+              },
+            ],
+          },
+        },
+      });
+    </script>
   </body>
 </html>
