--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -151,7 +151,16 @@
                   <p class="card-text"></p> -->
                  <a href="/ShowProducts/Prendas_Vestir" class="btn btn-primary">Ver Productos</a>
                 </div>
-             </div>
+              </div>
+
+              <div class="card mb-3" style="width: 15rem;">
+                <img src="/resources/images/abonar.png" class="card-img-top" alt="...">
+                <div class="card-body">
+<!--                   <h5 class="card-title">Categoria Prendas de Vestir</h5>
+                  <p class="card-text"></p> -->
+                 <a href="/ShowProducts/ProductosDevueltos" class="btn btn-primary">Ver Productos</a>
+                </div>
+              </div>
 
             </div>
 
