--- a/public/css/style.css
+++ b/public/css/style.css
@@ -577,5 +577,11 @@ body{
 table.dataTable {
   margin-top:10px !important;  
   margin-bottom:8px !important;  
+  vertical-align: middle;
+  text-align: center;
+
 }
 
+table#TableClients th{ text-align: center; }
+
+th.dt-center, td.dt-center { text-align: center; }
