--- a/views/ventas.ejs
+++ b/views/ventas.ejs
@@ -447,9 +447,7 @@
                                   onclick="mostrarDetallesVenta('<%= Venta.Id_Venta %>','<%= Venta.Cliente %>','<%= Venta.Vendedor %>','<%= Venta.Fecha_Venta %>','<%= Venta.Total_Venta %>')">
                                   <i class="fa-solid fa-money-check-dollar"></i>
                                 </button>
-                                <button type="button" class="btn btn-success" title="Devolver Producto" onclick="mostrarPanelDevolverProducto()">
-                                  <i class="fa-solid fa-receipt fa-lg" style="color: #f0e7e7;"></i>
-                                </button>
+                                
                               </td>
                             </tr>
                           <% } else if(Tipo == 'Credito' && Venta.Tipo_Venta == 'Credito' ){ %>
@@ -502,7 +500,7 @@
                 <div class="panel-content">
                   <h4>Devolucion de productos</h4>
                   <div style="max-height: 300px; overflow-y: auto">
-                    <table class="table" id="tablaDetalleVenta">
+                    <table class="table" id="tablaDevolucionVenta">
                       <thead>
                         <tr>
                           <th class="centrado">Cliente</th>
@@ -514,10 +512,10 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <td class="centrado" id="ClienteDetalle">Nolan</td>
-                          <td class="centrado" id="VendedorDetalle">kenneth</td>
+                          <td class="centrado" id="ClienteDevuelto">Nolan</td>
+                          <td class="centrado" id="VendedorDevuelto">kenneth</td>
                           <td></td>
-                          <td class="centrado" id="FechaDetalle"><input type="date"></td>
+                          <td class="centrado" id="FechaDevuelto"><input type="date"></td>
                           <td></td>
                         </tr>
                       </tbody>
@@ -675,7 +673,7 @@
                   
                 </div>
               </div>
-              </div>
+              </div> 
             </div>
         </div>
       </div>
