--- a/views/clientes.ejs
+++ b/views/clientes.ejs
@@ -395,18 +395,6 @@
     <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.22/js/dataTables.bootstrap5.min.js"></script>      
 
-    
-
-    
-    
-
-
-
-
-  
-
-
-
     <!-- codigo js para las validaciones-->
     <script>
       // Example starter JavaScript for disabling form submissions if there are invalid fields
@@ -449,20 +437,23 @@
     <% } %>
 
     <script>
-        $(document).ready(function(){
-            $('#TableClients').DataTable({
+      $(document).ready(function(){
+          $('#TableClients').DataTable({
               info: false,
               ordering: false,
               paging: false,
-              
               "oLanguage": {
-                "sSearch": "Buscar a un Cliente:"
-                }
-    
-            })
-
-            ;
-        });
+                  "sSearch": "Buscar a un Cliente:"
+              },
+              "rowCallback": function( row, data ) {
+                  if (data[3] === "activo") { // Suponiendo que el estado está en la cuarta columna (índice 3)
+                      $(row).css('background-color', 'green');
+                  } else if (data[3] === "inactivo") {
+                      $(row).css('background-color', 'red');
+                  }
+              }
+          });
+      });
     </script>
   </body>
 </html>
