First commit 21/5/2024  Kenneth

--- a/views/clientes.ejs
+++ b/views/clientes.ejs
@@ -227,7 +227,7 @@
       </div>
       <div class="Container px-3 py-1 contenedorventas">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12"></div>
-        <h4>Listado y registro (Clientes)</h4>
+        <h4>Listado y Registro de Clientes</h4>
       </div>
 
       <div class="Container px-2">
