--- a/views/vendedores.ejs
+++ b/views/vendedores.ejs
@@ -233,7 +233,7 @@
       </div>
       <div class="Container px-3 py-1 contenedorventas">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12"></div>
-        <h4>Listado y registro (Vendedores)</h4>
+        <h4>Listado y Registro de los Vendedores</h4>
       </div>
       <div class="Container px-3">
         <div class="row">
@@ -267,8 +267,8 @@
                 <thead>
                   <tr>
                     <th class="centrado">Nombre completo</th>
-                    <th class="centrado">Telefono</th>
                     <th class="centrado">Cedula</th>
+                    <th class="centrado">Telefono</th>
                     <th class="centrado">Dirección</th>
                     <th class="centrado">Acciones</th>
                   </tr>
