--- a/views/inicio.ejs
+++ b/views/inicio.ejs
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="shortcut icon" href="/resources/images/favicon.ico">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style2.css">
     <link href="https://fonts.googleapis.com/css?family=Muli:300,700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
@@ -41,8 +42,8 @@
                 <div class="row">
                   <div class="col-lg-3 col-md-6 d-flex stat my-3">
                     <div class="mx-auto">
-                      <h6 class="text-muted">Ingresos mensuales</h6>
-                      <h3 class="font-weight-bold">$50000</h3>
+                      <h6 class="text-muted">Ingresos del Mes</h6>
+                      <h3 class="font-weight-bold"><%= Ingresos%></h3>
                       <h6 class="text-success">
                         <i class="icon ion-md-arrow-dropup-circle"></i> 50.50%
                       </h6>
@@ -51,7 +52,7 @@
                   <div class="col-lg-3 col-md-6 d-flex stat my-3">
                     <div class="mx-auto">
                       <h6 class="text-muted">Productos activos</h6>
-                      <h3 class="font-weight-bold">100</h3>
+                      <h3 class="font-weight-bold"><%= Productos%></h3>
                       <h6 class="text-success">
                         <i class="icon ion-md-arrow-dropup-circle"></i> 25.50%
                       </h6>
@@ -59,8 +60,8 @@
                   </div>
                   <div class="col-lg-3 col-md-6 d-flex stat my-3">
                     <div class="mx-auto">
-                      <h6 class="text-muted">No. de clientes</h6>
-                      <h3 class="font-weight-bold">100</h3>
+                      <h6 class="text-muted">No. Clientes Activos</h6>
+                      <h3 class="font-weight-bold"><%= No_Clientes %></h3>
                       <h6 class="text-success">
                         <i class="icon ion-md-arrow-dropup-circle"></i> 75.50%
                       </h6>
@@ -88,7 +89,7 @@
                 <div class="card rounded-0">
                   <div class="card-header bg-light">
                     <h6 class="font-weight-bold mb-0">
-                      Promedio de ventas al credito mensuales
+                      Cantidad de ventas al Contado Mensuales
                     </h6>
                   </div>
                   <div class="card-body">
@@ -101,7 +102,7 @@
                 <div class="card rounded-0">
                   <div class="card-header bg-light">
                     <h6 class="font-weight-bold mb-0">
-                      Promedio de ventas al contado mensuales
+                      Cantidad de ventas al Credito Mensuales
                     </h6>
                   </div>
                   <div class="card-body">
@@ -109,7 +110,58 @@
                   </div>
                 </div>
               </div>
+
               <div class="col-lg-6 my-3">
+                <div class="card rounded-0">
+                  <div class="card-header bg-light">
+                    <h6 class="font-weight-bold mb-0">Ventas recientes</h6>
+                  </div>
+                  <div class="card-body pt-2">
+                    <% Ventas.forEach((venta) => { %>
+                      
+                    <div class="d-flex border-bottom py-2">
+                      <div class="d-flex me-3">
+                        <h2 class="align-self-center mb-0 text-success">
+                          <i class="icon ion-md-pricetag"></i>
+                        </h2>
+                      </div>
+                      <div class="flex-grow-1">
+                        <div class="row">
+                          <div class="col text-center">
+                            <small class="d-block text-muted"><b>Venta al <%= venta.Tipo_Venta %></b></small>
+                          </div>
+                        </div>
+                        <div class="row align-items-center">
+                          <div class="col-6 text-start">
+                            <h6 class="mb-0"><b>C$ <%= venta.Total_Venta %></b></h6>
+                          </div>
+                          <div class="col-6 text-end">
+                            <small><b><%= venta.Fecha_Venta %></b></small>
+                          </div>
+                        </div>
+                        <div class="row align-items-center mt-2">
+                          <div class="col-6 text-start">
+                            <small class="text-muted">Cliente: <%= venta.Cliente %></small>
+                          </div>
+                          <div class="col-6 text-end">
+                            <small class="text-muted">Vendedor: <%= venta.Vendedor %></small>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+  
+                    <% }) %> 
+
+                    
+                    <button onclick="SeeALL()" class="btn btn-primary w-100">Ver todas</button>
+                  </div>
+                </div>
+              </div>
+              
+              
+              
+<!--               <div class="col-lg-6 my-3">
                 <div class="card rounded-0">
                   <div class="card-header bg-light">
                     <h6 class="font-weight-bold mb-0">Ventas recientes</h6>
@@ -122,63 +174,20 @@
                         </h2>
                       </div>
                       <div class="align-self-center">
-                        <h6 class="d-inline-block mb-0">C$850</h6>
+                        <small class="d-block text-muted"><b>Venta al credito</b></small>
+                        <h6 class="d-inline-block mb-0"><b>Total Venta</b></h6>
+                        <small class="d-inline-block ml-5">08 Mayo 2024</small>
+                        <small class="d-block text-muted">Cliente</small>
+                        <small class="d-block text-muted">Vendedor</small>
                         
-                        <small class="d-block text-muted">Ventas al credito</small>
                       </div>
                     </div>
-                    <div class="d-flex border-bottom py-2">
-                      <div class="d-flex mr-3">
-                        <h2 class="align-self-center mb-0">
-                          <i class="icon ion-md-pricetag"></i>
-                        </h2>
-                      </div>
-                      <div class="align-self-center">
-                        <h6 class="d-inline-block mb-0">C$250</h6>
-                        
-                        <small class="d-block text-muted">Venta al contado</small>
-                      </div>
-                    </div>
-                    <div class="d-flex border-bottom py-2">
-                      <div class="d-flex mr-3">
-                        <h2 class="align-self-center mb-0">
-                          <i class="icon ion-md-pricetag"></i>
-                        </h2>
-                      </div>
-                      <div class="align-self-center">
-                        <h6 class="d-inline-block mb-0">C$1050</h6>
-                        
-                        <small class="d-block text-muted">Venta al contado</small>
-                      </div>
-                    </div>
-                    <div class="d-flex border-bottom py-2">
-                      <div class="d-flex mr-3">
-                        <h2 class="align-self-center mb-0">
-                          <i class="icon ion-md-pricetag"></i>
-                        </h2>
-                      </div>
-                      <div class="align-self-center">
-                        <h6 class="d-inline-block mb-0">C$2500</h6>
-                        
-                        <small class="d-block text-muted">Venta al credito</small>
-                      </div>
-                    </div>
-                    <div class="d-flex border-bottom py-2 mb-3">
-                      <div class="d-flex mr-3">
-                        <h2 class="align-self-center mb-0">
-                          <i class="icon ion-md-pricetag"></i>
-                        </h2>
-                      </div>
-                      <div class="align-self-center">
-                        <h6 class="d-inline-block mb-0">C$2800</h6>
-                        
-                        <small class="d-block text-muted">Venta al credito</small>
-                      </div>
-                    </div>
-                    <button class="btn btn-primary w-100">Ver todas</button>
+
+
+                    <button onclick="SeeALL()" class="btn btn-primary w-100">Ver todas</button>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
@@ -207,15 +216,50 @@
       crossorigin="anonymous"
     ></script>
     <script>
+      var valores = JSON.parse("<%- JSON.stringify(VentaContado.map(venta => venta.Cantidad_Ventas)) %>");
+      var labels = <%- JSON.stringify(VentaContado.map(venta => venta.Mes)) %>; 
       var ctx = document.getElementById("myChart").getContext("2d");
       var myChart = new Chart(ctx, {
         type: "bar",
         data: {
-          labels: ["Dic 2023", "Ene 2024", "Fre 2024", "Mar 2024"],
+          labels: labels,
+          datasets: [
+            {
+              label: "Meses Anteriores",
+              data: valores,
+              backgroundColor: ["#12C9E5", "#12C9E5", "#12C9E5", "#12C9E5", "#111B54"],
+              maxBarThickness: 30,
+              maxBarLength: 2,
+            },
+          ],
+        },
+        options: {
+          scales: {
+            yAxes: [
+              {
+                ticks: {
+                  beginAtZero: true,
+                },
+              },
+            ],
+          },
+        },
+      });
+    </script>
+
+    <script>
+      var valores = JSON.parse("<%- JSON.stringify(VentaCredito.map(venta => venta.Cantidad_Ventas)) %>");
+      var labels = <%- JSON.stringify(VentaCredito.map(venta => venta.Mes)) %>; 
+
+      var ctx = document.getElementById("myChart2").getContext("2d");
+      var myChart = new Chart(ctx, {
+        type: "bar",
+        data: {
+          labels: labels,
           datasets: [
             {
               label: "Ventas de meses anteriores",
-              data: [50, 100, 150, 200],
+              data: valores,
               backgroundColor: ["#12C9E5", "#12C9E5", "#12C9E5", "#111B54"],
               maxBarThickness: 30,
               maxBarLength: 2,
@@ -237,33 +281,8 @@
     </script>
 
     <script>
-      var ctx = document.getElementById("myChart2").getContext("2d");
-      var myChart = new Chart(ctx, {
-        type: "bar",
-        data: {
-          labels: ["Dic 2023", "Ene 2024", "Fre 2024", "Mar 2024"],
-          datasets: [
-            {
-              label: "Ventas de meses anteriores",
-              data: [80, 110, 120, 180],
-              backgroundColor: ["#12C9E5", "#12C9E5", "#12C9E5", "#111B54"],
-              maxBarThickness: 30,
-              maxBarLength: 2,
-            },
-          ],
-        },
-        options: {
-          scales: {
-            yAxes: [
-              {
-                ticks: {
-                  beginAtZero: true,
-                },
-              },
-            ],
-          },
-        },
-      });
+      function SeeALL()
+      { window.location = '/ventas';}
     </script>
   </body>
 </html>
