--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -51,6 +51,15 @@
           </a>
           <span class="tooltip">Producto</span>
         </li>
+
+        <li>
+          <a href="/Compras">
+            <i class='bx bxs-shopping-bags'></i>
+            <span class="links_name">Inicio</span>
+          </a>
+          <span class="tooltip">Inicio</span>
+        </li>
+
         <li>
           <a href="/ventas">
             <i class="bx bx-credit-card"></i>
