Implementación de proveedores

--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -45,6 +45,13 @@
           <span class="tooltip">Vendedor</span>
         </li>
         <li>
+          <a href="/Proveedores">
+            <i class='bx bxs-shopping-bag'></i>
+            <span class="links_name">Proveedores</span>
+          </a>
+          <span class="tooltip">Proveedores</span>
+        </li>
+        <li>
           <a href="/productos">
             <i class="bx bx-purchase-tag-alt"></i>
             <span class="links_name">Producto</span>
@@ -55,9 +62,9 @@
         <li>
           <a href="/Compras">
             <i class='bx bxs-shopping-bags'></i>
-            <span class="links_name">Inicio</span>
+            <span class="links_name">Compras</span>
           </a>
-          <span class="tooltip">Inicio</span>
+          <span class="tooltip">Compras</span>
         </li>
 
         <li>
