--- a/views/Compras.ejs
+++ b/views/Compras.ejs
@@ -76,22 +76,10 @@
                                 >
                                   <div class="row g-3">
                                     <div class="col">
-                                      <label
-                                        for="Fecha_Compra"
-                                        class="form-label"
-                                        >Seleccione el Proveedor</label
-                                      >
-                                      <select
-                                        class="form-select"
-                                        aria-label="Default select example"
-                                      >
-                                        <option selected>
-                                          Seleccionar un proovedor
-                                        </option>
-                                        <option value="1">Juan</option>
-                                        <option value="2">Pedro</option>
-                                        <option value="3">Sergio</option>
-                                      </select>
+                                      <label for="BuscarProveedor" class="form-label" >Buscar un Proveedor</label>
+                                      <div class="d-grid gap-2">
+                                        <button class="btn btn-outline-success" type="button" id="btnBuscarProveedor" onclick="mostrarProveedorCompras()">Buscar   <i class='bx bx-search'></i></button>
+                                      </div>
                                     </div>
                                     <div class="col">
                                       <label
@@ -509,7 +497,42 @@
                 </div>
               </div>
             </div>
+            
+            <div id="BuscarProveedorVenta"class="panel-flotante panel-ancho"style="display: none">
+              <div class="panel-content">
+                <h4 id="Title_Compras">Buscar un proveedor</h4>
+                <div style="max-height: 300px; overflow-y: auto">
+                  <div class="row">
+                    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                      <table class="table primary">
+                        <thead>
+                          <tr>
+                            <th class="centrado">Proveedor</th>
+                            <th class="centrado">Estado</th>
+                            <th class="centrado"></th>
+                          </tr>
+                          <tbody>
+                            <td class="centrado">Norlan Daniel Gonzalez Fonseca</td>
+                            <td class="centrado">Activo</td> 
+                            <td class="centrado"><button type="button" class="btn btn-success px-3" title="Añadir"><i class='bx bxs-comment-add'></i></button></td>
+                          </tbody>
+                        </thead>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+            
+                <button
+                  type="button"
+                  class="btn btn-danger"
+                  onclick="cerrarProveedorCompras()"
+                >
+                  Cancelar
+                </button>
+              </div>
             </div>
+
+          </div>
           </div>
         </div>
       </div>
